# poi-project

./: .gitignore  .gitmodules  .rules  README.md  pyproject.toml
.claude/: settings.local.json
.claude/memory/: voice-notifications.md
Daily/: .mcp.json  README.md  api_server.py  app.py  config.json  hourly_chime.py  identity_check.py  idle_detector.py  test_features.py
